# chatbot_with_plugins

./: README.md  api_message_structure.py  chatbot.py  const.py  logger.py  main.py  pyproject.toml
storage/: base_storage.py  local_storage.py
storage/objects/: user.py
