[tool.poetry]
name = "chatbot-with-plugins"
version = "0.1.0"
description = "Chatbot based on OpenAI API"
authors = ["Eduard Khusnutdinov"]
readme = "README.md"
packages = [{include = "chatbot_with_plugins"}]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.25.1"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
